--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,8 +34,8 @@ jobs:
 #       contents: read
 #       packages: write
 
-      - name: Check Out Repo 
-        uses: actions/checkout@v2
+#       - name: Check Out Repo 
+#         uses: actions/checkout@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
