--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,12 +25,6 @@ jobs:
       - name: "Checkout Code"
         uses: "actions/checkout@v2"
 
-      - name: "Lint code"
-        run: echo "Linting repository"
-
-      - name: "Run unit tests"
-        run: echo "Running unit tests"
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -48,7 +42,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.repository }}:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
