--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,6 +45,15 @@ jobs:
           #tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.repository }}:${{github.run_id}}
           tags: ${{ github.repository }}:${{github.run_number}}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 #       - name: Image digest
 #         run: echo ${{ steps.docker_build.outputs.digest }}
